--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ jdk:
 
 install:
   - cd sigma
-  - mvn install -DskipTests=true
+  # - mvn install -DskipTests=true
+  - mvn install -DskipTests=false
 
 notifications:
   email: false
