--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,8 @@ jdk:
 
 install:
   - cd sigma
-  - # works?
-  - chmod +x sigma/install.sh
-  - sigma/install.sh
   # this works:
-  # - mvn install -DskipTests=false
+  - mvn install -DskipTests=false
 
 notifications:
   email: false
